# controllers/network_controller.py
@@ -4,8 +4,8 @@ from gameserver.database import db
 db_session = db.session
 game = Game()
 
-def create_network():
-    return 'do some magic!'
+def create_network(network):
+    pass
 
 def get_network():
     return game.get_network(), 200
